some minor updates and changes
