# docs/swagger.json
@@ -399,9 +399,6 @@
                 "created_at": {
                     "type": "string"
                 },
-                "from_id": {
-                    "type": "integer"
-                },
                 "id": {
                     "type": "integer"
                 },
@@ -415,7 +412,10 @@
                     "description": "this is a special field show a small snippet of the match terms",
                     "type": "string"
                 },
-                "to_id": {
+                "source": {
+                    "type": "integer"
+                },
+                "target": {
                     "type": "integer"
                 },
                 "updated_at": {
